# KindredAI_OpenAI_Codex_hackathon

./: .gitignore  MCP_TOOL_CATALOG.md  PROJECT_TODO.md  README.md  main.py  pyproject.toml
backend/: .env.example  README.md  main.py  pyproject.toml
backend/agent_capabilities/: agent_capabilites.md
backend/docs/: architecture.md
backend/src/kindred_ai/: __init__.py  sample.py
backend/src/kindred_ai/agents/: TEST_SCENARIOS.md  __init__.py  companion.py  guardian.py  improvements.md  logistics.py  master.py  research.py  router.py
backend/src/kindred_ai/application/: __init__.py  companion.py  conversation_state.py  guardian.py  logistics.py  master.py  master_voice.py  research.py  router.py
backend/src/kindred_ai/application/communication/: __init__.py  service.py
backend/src/kindred_ai/application/health/: __init__.py  service.py
backend/src/kindred_ai/config/: __init__.py  agent_registry.py  agents.yaml  agents_old.yaml  model_settings.py
backend/src/kindred_ai/domain/: __init__.py  research.py
backend/src/kindred_ai/domain/health/: __init__.py  (+1 more)
backend/src/kindred_ai/infrastructure/: __init__.py  mcp_clients.py  observability.py
backend/src/kindred_ai/mcp/: __init__.py
backend/src/kindred_ai/presentation/: __init__.py  gradio_guardian.py  gradio_master.py
backend/tests/: test_agent_registry.py  test_agent_router_schema.py  test_api.py  test_communication_mcp.py  test_gradio_guardian.py  test_health_mcp.py  test_inventory_guardian.py  test_master_agent.py  test_memory_mcp.py  test_realtime_voice.py  test_research_agent.py  test_security_mcp.py
(+86 files in other folders)
