[project]
name = "kindred-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "fastmcp>=3.4.4",
    "langfuse>=4.14.0",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
    "websockets>=16.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kindred_ai"]
